--- a/templates/index_re-password.html
+++ b/templates/index_re-password.html
@@ -101,6 +101,6 @@
         </div>
       </div>
     </section>
-    <script src="/asses/js/re-password.js" script>
+    <script src="/asses/js/re-password.js" </script>
   </body>
 </html>
