--- a/templates/index_regulations_staff.html
+++ b/templates/index_regulations_staff.html
@@ -32,11 +32,7 @@
     <header class="header">
         <div class="menu">
           <!-- Logo -->
-          <img
-              src="/asses/favicon/Logo_Gr.svg"
-              alt="Shine smile"
-              class="logo header__logo"
-          />
+          <img src="/asses/favicon/Logo_Gr.svg" alt="Shine smile" class="logo header__logo"/>
           <!-- Navbar  -->
           <nav class="navbar">
             <ul class="navbar__list" id="navbar__list--pc">
@@ -67,33 +63,10 @@
 
     <!-- main -->
     <main>
-
-      <!-- hero -->
-      <section class="hero">
-        <img
-          class="hero__img "
-          src="/asses/img/Plane_0.svg"
-          alt="Plane_0"
-        />
-        <div class="hero__content">
-          <h1 class="hero__heading">VietHub Staff rule adjustments</h1>
-          <p class="hero__desc">
-            Enjoy your trip and receive the personal service you deserve. with world-leading services
-          </p>
-          <div class="hero__row">
-            <a href="/templates/index_booking.html" class="btn">Book Online</a>
-            <span class="hero__phone">or call (123) 456-789</span>
-          </div>
-        </div> 
-      </section>
-
       <!-- how -->
       <section class="book">
         <div class="container">
-          <h2 class="book__heading section-heading">How to book</h2>
-          <p class="book__desc section-desc">
-            Here is our booking process. For more information please click see more.
-          </p>
+          <h2 class="book__heading section-heading">Rule adjustments</h2>
           <div class="book__list">
             <!-- item 1 -->
             <section class="book-item">
