--- a/asses/css/style_price_staff.css
+++ b/asses/css/style_price_staff.css
@@ -11,7 +11,7 @@ body {
     font-family: "Sora", sans-serif;
 }
 
- :root {
+:root {
     --font-heading: "Sora";
     --font-content: "Open Sans";
     --primary-color: #21A9DE;
@@ -158,64 +158,6 @@ a {
 
 /* ========== main ========== */
 
-
-/* ===== hero ===== */
-
-.hero__heading {
-    color: #FFF;
-    text-align: center;
-    font-size: 7rem;
-    font-weight: 600;
-    line-height: 1.14;
-    letter-spacing: -1.4px;
-}
-
-.hero__desc {
-    margin-top: 30px;
-    color: #c9d2da;
-    font-size: 1.8rem;
-    font-weight: 400;
-    line-height: 1.67;
-    width: 458px;
-    text-align: center;
-}
-
-.hero__row {
-    margin-top: 40px;
-    display: flex;
-    align-items: center;
-    column-gap: 40px;
-}
-
-.hero__phone {
-    color: #fff;
-    font-size: 1.8rem;
-    font-weight: 400;
-    line-height: 1.67;
-}
-
-.hero {
-    display: flex;
-    position: relative;
-}
-
-.hero__content {
-    margin: 130px 320px;
-    width: 57.1%;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
-.hero__img {
-    min-width: 100vw;
-    object-fit: cover;
-}
-
-
 /* ===== how  ===== */
 
 .book {
@@ -246,7 +188,7 @@ a {
     transition: 0.25s;
 }
 
-.book-item:hover {
+.book-item__active {
     border-color: var(--primary-color);
     transition: 0.25s;
     transform: translateY(-16px);
@@ -294,7 +236,7 @@ a {
     width: calc(100% / 6 - 50px);
     height: 50px;
     color: #FFF;
-    border-radius: 20px;
+    border-radius: 10px;
     border-color: #00256C;
 }
 
@@ -312,7 +254,8 @@ a {
 .input {
     margin: 10px;
     padding: 10px;
-    width: 300px;
+    width: 400px;
+    height: 50px;
     border-radius: 10px;
     color: #00256C;
     border-color: #00256C;
@@ -320,20 +263,15 @@ a {
 
 .container_bar {
     margin: 20px 0 auto;
-    width: 1350px;
     display: flex;
     padding: 20px;
     align-items: center;
     justify-content: space-between;
-    flex-wrap: wrap;
 }
-
-.container_bar_search_input {
+.search{
     padding-left: 20px;
-}
-
-.container_bar_search_input svg {
-    margin-top: 0px;
+    display: flex;
+    align-items: center;
 }
 
 h1 {
@@ -342,15 +280,18 @@ h1 {
     font-size: 45px;
     font-weight: bold;
 }
+.passengerType,
+.ticketClass{
+    padding: 60px;
+}
 
 
 /* dinh dang table vaf cac thanh phan ben trong*/
 
 table {
-    margin-left: 95px;
+    margin-left: 30px;
     margin-top: 40px;
-    margin-bottom: 60px;
-    width: 85%;
+    width: 96%;
 }
 
 th {
