--- a/asses/css/style_reservation.css
+++ b/asses/css/style_reservation.css
@@ -134,12 +134,13 @@ a {
   text-align: center;
   font-size: 7rem;
   font-weight: 600;
-  line-height: 1.14;
+  line-height: 2;
   letter-spacing: -1.4px;
 }
 .hero {
   display: flex;
   position: relative;
+  margin-bottom: 280px;
 }
 .hero__img {
   min-width: 100vw;
@@ -163,120 +164,9 @@ a {
   text-align: center;
 }
 
-/* ===== search container ===== */
-
-.search__container {
-  margin-top: 165px;
-  padding: 15px 30px 15px;
-  border-radius: 30px;
-  background: #fff;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.fromto__search,
-.calendar__search,
-.seat__search {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.fromto__search {
-  text-align: center;
-}
-.calendar__search,
-.seat__search,
-.fromto__search {
-  gap: 20px;
-}
-.abb-name {
-  min-width: 100px;
-  color: var(--header-bg);
-  font-family: Poppins;
-  font-size: 3.5rem;
-  font-weight: 600;
-}
-.name {
-  min-width: 100px;
-}
-.form-label,
-.full-name {
-  padding-top: 10px;
-  color: var(--desc-color);
-  font-family: Poppins;
-  font-size: 2rem;
-  font-weight: 400;
-}
-.btn__search {
-  width: 150px;
-  height: 70px;
-  border-radius: 20px;
-  background: #00256c;
-
-  color: #fff;
-  text-align: center;
-  font-family: Poppins;
-  font-size: 26px;
-  font-weight: 500;
-  line-height: 1.3;
-}
-
-.form-label,
-.form-input {
-  display: block;
-}
-
-.form-input {
-  height: 34px;
-  margin-top: 10px;
-  padding: 4px 8px;
-  border: 2px solid #ccc;
-  border-radius: 4px;
-}
-#toList,
-#fromList {
-  text-align: start;
-}
-
-.destination-list {
-  width: 350px;
-  display: none;
-  position: absolute;
-  background-color: #fff;
-  border: 1px solid var(--header-bg);
-  border-radius: 5px;
-  padding: 10px;
-  z-index: 1;
-}
-.international__li,
-.domestic__li {
-  color: var(--header-bg);
-  font-size: 2rem;
-  font-weight: 500;
-  line-height: 1.14;
-}
-.li {
-  padding-left: 10px;
-  margin: 5px;
-}
-.from__search:hover,
-.to__search:hover {
-  cursor: pointer;
-}
-/* ===== button search ===== */
-.btn__search:hover {
-  cursor: pointer;
-  color: var(--header-bg);
-  background: var(--partners-bg);
-}
-/*
 /* ===== result ===== */
 .result {
-  margin-top: 60px;
+  margin-top: 50px;
 }
 .result__container {
   height: 300px;
@@ -359,7 +249,7 @@ a {
 .das_result {
   padding-top: 22px;
   display: flex;
-  align-items: center;
+  align-items: top;
   text-align: center;
 }
 
@@ -452,41 +342,4 @@ a {
   font-weight: 600;
   font-size: 23px;
   color: #ffffff;
-}
-/*==== cancel-print ====*/
-.button-group {
-  display: flex;
-  justify-content: center; /* Căn nút về giữa theo chiều ngang */
-  margin-top: 20px;
-}
-
-.btn_cancel {
-  padding: 10px; /* Định dạng kích thước nút */
-  margin-right: 10px;
-  background-color: #ff0000; /* Màu nền của nút */
-  color: #fff; /* Màu chữ của nút */
-  border: none; /* Xóa viền của nút */
-  border-radius: 10px; /* Bo tròn góc của nút */
-  cursor: pointer; /* Hiển thị icon con trỏ khi di chuột qua nút */
-  font-family: Poppins; /* Font chữ của nút */
-  font-size: 18px; /* Cỡ chữ của nút */
-}
-
-.btn_cancel:hover {
-  background-color: #ff7f7f; /* Màu nền của nút khi di chuột qua */
-}
-
-.btn_print {
-  padding: 5px; /* Định dạng kích thước nút */
-  background-color: #00256c; /* Màu nền của nút */
-  color: #fff; /* Màu chữ của nút */
-  border: none; /* Xóa viền của nút */
-  border-radius: 10px; /* Bo tròn góc của nút */
-  cursor: pointer; /* Hiển thị icon con trỏ khi di chuột qua nút */
-  font-family: Poppins; /* Font chữ của nút */
-  font-size: 18px; /* Cỡ chữ của nút */
-}
-
-.btn_print:hover {
-  background-color: #0056b3; /* Màu nền của nút khi di chuột qua */
 }
