--- a/templates/index_reservation_staff.html
+++ b/templates/index_reservation_staff.html
@@ -80,8 +80,8 @@
       <div class="container_bar">
 
         <div class="container_bar_search_input">
-          <svg class="container_bar_img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="40" height="35"  fill="#00256C" ><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"/></svg>
-          <input class="input" type="text" placeholder="Search plane ID ..." />
+          <svg class="container_bar_img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="35" height="35" fill="#00256C" ><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"/></svg>
+          <input class="input" type="text" placeholder="Search Passanger ID ..." />
         </div>
 
         <button id="btnSearchClass" class="btn_bar_remove">Search</button>
@@ -117,91 +117,45 @@
           <div class="table_title">
             <tr>
               <th>PNR</th>
-              <th>From</th>
-              <th>To</th>
-              <th>Date of Departure</th>
-              <th>Date of Arrival</th>
+              <th>Ticket ID</th>
               <th>Class ID</th>
               <th>Seat ID</th>
-              <th>Name of Passanger</th>
               <th>Passanger ID</th>
-              <th>Phone Number</th>
-              <th>Email</th>
+              <th>Passanger Type</th>
+              <th>Price Ticket</th>
              <th>Date of Reservation</th>
+             <th>Ticket Issue Date</th>
             </tr>
           </div>
           <div class="table_row">
             <tr>
               <td>VN01</td>
-              <td>Ha Noi</td>
-              <td>TP HCM</td>
-              <td>20-5-2024 8h30</td>
-              <td>20-5-2024 9h30</td>
-              <td>1</td>
-              <td>A01</td>
-              <td>Nguyen Hong Phat</td>
+              <td>VE01</td>
+              <td>2</td>
+              <td>VIP01</td>
               <td>987346254678</td>
-              <td>0975674367</td>
-              <td>nguyenphat@gmail.com</td>
+              <td>Adult</td>
+              <td>1.100.000VND</td>
               <td>10-5-2024</td>
+              <td>20-5-2024</td>
             </tr>
           </div>
 
           <div class="table_row">
             <tr>
               <td>VN02</td>
-              <td>Ha Noi</td>
-              <td>Seoul</td>
-              <td>25-5-2024 8h30</td>
-              <td>25-5-2024 16h30</td>
-              <td>2</td>
-              <td>VIP01</td>
-              <td>Nguyen Thi Khanh Linh</td>
-              <td>987333354678</td>
-              <td>0975698767</td>
-              <td>linhnguyen@gmail.com</td>
-              <td>12-5-2024</td>
-            </tr>
-          </div>
-
-          <div class="table_row">
-            <tr>
-              <td>VN03</td>
-              <td>Ha Noi</td>
-              <td>Tokyo</td>
-              <td>30-5-2024 19h30</td>
-              <td>30-5-2024 23h30</td>
-              <td>2</td>
-              <td>VIP02</td>
-              <td>Nguyen Tran Phuc</td>
-              <td>9873555354678</td>
-              <td>0975344767</td>
-              <td>nguyentranphuc@gmail.com</td>
-              <td>15-5-2024</td>
-            </tr>
-          </div>
-
-          <div class="table_row">
-            <tr>
-              <td>VN04</td>
-              <td>Tokyo</td>
-              <td>Berlin</td>
-              <td>12-6-2024 20h30</td>
-              <td>12-6-2024 23h30</td>
-              <td>2</td>
-              <td>VIP03</td>
-              <td>Dang Thanh Ngân</td>
-              <td>9873444354678</td>
-              <td>0975234767</td>
-              <td>dangthanhnganc@gmail.com</td>
-              <td>15-5-2024</td>
+              <td>VE02</td>
+              <td>1</td>
+              <td>A01</td>
+              <td>989876254678</td>
+              <td>Adult</td>
+              <td>300.000VND</td>
+              <td>13-5-2024</td>
+              <td>25-5-2024</td>
             </tr>
           </div>
 
       </table>
-      <!--Het-->
-  
-      <!-- how -->
       
          
       </section>
