--- a/templates/index_planes_staff.html
+++ b/templates/index_planes_staff.html
@@ -188,7 +188,7 @@
                 <form>
                   <div class= "field_add_station"> 
                     <label class="label_station">Plane ID:</label>
-                    <input required class="input_staion" type="text" placeholder="Enter Plane ID">
+                    <input required class="input_station" type="text" placeholder="Enter Plane ID">
                     <button id="confirmRemove" class="btn_station">Remove</button>
                     <button id="cancelRemove" class="btn_station">Cancel</button>
                 </div>
@@ -290,7 +290,7 @@
                 <form>
                   <div class= "field_add_station"> 
                     <label class="label_station">Station ID:</label>
-                    <input required class="input_staion" type="text" placeholder="Enter Station ID">
+                    <input required class="input_station" type="text" placeholder="Enter Station ID">
                     <button id="confirmRemoveStations" class="btn_station">Remove</button>
                     <button id="cancelRemoveStations" class="btn_station">Cancel</button>
     
