--- a/templates/index_report_staff.html
+++ b/templates/index_report_staff.html
@@ -41,10 +41,10 @@
           <nav class="navbar">
             <ul class="navbar__list" id="navbar__list--pc">
               <li class="navbar__item">
-                <a href="/templates/index_staff.html" class="navbar__link ">Home</a>
+                <a href="/templates/index_reservation_staff.html" class="navbar__link">Reservation</a>
               </li>
               <li class="navbar__item">
-                <a href="/templates/index_search_staff.html" class="navbar__link">Search</a>
+                <a href="/templates/index_search_staff.html" class="navbar__link">Flight</a>
               </li>
               <li class="navbar__item">
                 <a href="/templates/index_adding_staff.html" class="navbar__link">Add Flight</a>
