Upload File Admin { html, css, js}

--- a/templates/index_report_admin.html
+++ b/templates/index_report_admin.html
@@ -41,19 +41,10 @@
             <nav class="navbar">
               <ul class="navbar__list" id="navbar__list--pc">
                 <li class="navbar__item">
-                  <a href="/templates/index_reservation_staff.html" class="navbar__link">Reservation</a>
+                  <a href="/templates/index_report_admin.html" class="navbar__link navbar__link--active">Report</a>
                 </li>
                 <li class="navbar__item">
-                  <a href="/templates/index_search_staff.html" class="navbar__link">Flight</a>
-                </li>
-                <li class="navbar__item">
-                  <a href="/templates/index_adding_staff.html" class="navbar__link">Add Flight</a>
-                </li>
-                <li class="navbar__item">
-                  <a href="/templates/index_report_staff.html" class="navbar__link navbar__link--active">Report</a>
-                </li>
-                <li class="navbar__item">
-                  <a href="/templates/index_regulations_staff.html" class="navbar__link">Regulations</a>
+                  <a href="/templates/index_decentralization_admin.html" class="navbar__link">Decentralization</a>
                 </li>
               </ul>
             </nav>
