--- a/asses/css/style_search_staff.css
+++ b/asses/css/style_search_staff.css
@@ -1,24 +1,30 @@
 * {
   box-sizing: border-box;
 }
+
 html {
   font-size: 62.5%;
 }
+
 body {
   font-size: 1.6rem;
   font-family: "Sora", sans-serif;
 }
+
 :root {
   --font-heading: "Sora";
   --font-content: "Open Sans";
   --primary-color: #21A9DE;
   --header-bg: #00256C;
   --partners-bg: #F6FBFF;
-  --desc-color:#575F66;
 }
 
+
 /* ========== common ========== */
+
+
 /* se co nhung the khong an theo thuoc tinh chung */
+
 input,
 textarea,
 select,
@@ -26,14 +32,17 @@ button {
   font-family: inherit;
   font-size: inherit;
 }
+
 .container {
   width: 1170px;
   margin: 0 auto;
   max-width: calc(100% - 48px);
 }
+
 a {
   text-decoration: none;
 }
+
 .btn {
   /* box chua */
   display: inline-block;
@@ -41,22 +50,39 @@ a {
   line-height: 60px;
   border-radius: 30px;
   background: var(--primary-color);
-
   /* text */
   text-align: center;
   color: #fff;
   font-size: 18px;
   font-weight: 400;
 }
+
 .btn:hover {
   /* Lam mo nen */
   opacity: 0.9;
 }
+
+.section-heading {
+  color: var(--header-bg);
+  font-size: 5rem;
+  font-weight: 600;
+  line-height: 1.2;
+  letter-spacing: -1px;
+}
+
+.section-desc {
+  color: #575f66;
+  font-size: 1.8rem;
+  font-weight: 300;
+  line-height: 1.67;
+}
+
 .control {
   display: flex;
   column-gap: 18px;
   align-items: center;
 }
+
 .control__btn {
   width: 36px;
   height: 36px;
@@ -69,20 +95,25 @@ a {
   cursor: pointer;
   transition: 0.25s;
 }
+
 .control__btn:hover {
   background: var(--primary-color);
   border-color: var(--primary-color);
   color: #fff;
 }
+
 .control__btn--next {
   rotate: 180deg;
 }
 
+
 /* ========== header ========== */
+
 .header {
   background: var(--header-bg);
   min-width: 100vw;
 }
+
 .menu {
   padding: 10px;
   width: 1400px;
@@ -92,9 +123,11 @@ a {
   align-items: center;
   justify-content: space-between;
 }
+
 .navbar__list {
   display: flex;
 }
+
 .header__action--login,
 .navbar__link {
   padding: 8px 21px;
@@ -103,6 +136,7 @@ a {
   font-weight: 300;
   line-height: 1.75;
 }
+
 .navbar__link:hover,
 .navbar__link--active {
   color: #fff;
@@ -110,372 +144,79 @@ a {
   text-shadow: 1px 0 0 currentColor;
   line-height: 1.75;
 }
+
 .header__action--signup {
   min-width: 104px;
   line-height: 44px;
   font-size: 1.6rem;
 }
+
 .header__action--login {
   margin-right: 7px;
 }
 
+
 /* ========== main ========== */
 
-/* ===== search ===== */
-
-.search{
-  height: 100vh;
-  background: var(--partners-bg)
-}
-
-/* ===== hero ===== */
-.hero__heading {
-  color: #FFF;
+/* heading */
+.lookup_heading{
   text-align: center;
-  font-size: 7rem;
-  font-weight: 600;
-  line-height: 1.14;
-  letter-spacing: -1.4px;
-}
-.hero{
-  display: flex;
-  position: relative;
-}
-.hero__img {
-  min-width: 100vw;
-  object-fit: cover;
-  position: absolute;
-}
-
-/* ===== search container ===== */
-
-.search__container{
-  margin-top: 165px;
-  padding: 15px 30px 15px;
-  border-radius: 30px;
-  background: #FFF;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.fromto__search,
-.calendar__search,
-.seat__search{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.fromto__search{
-  text-align: center;
-}
-.calendar__search,
-.seat__search,
-.fromto__search{
-  gap: 20px;
-}
-.abb-name{
-  min-width: 155px;
-  color:var(--header-bg);
-  font-family: Poppins;
-  font-size: 3.5rem;
-  font-weight: 600;
-  
-}
-.name{
-  min-width: 150px;
-}
-.form-label,
-.full-name{
-  
-  padding-top: 10px;
-  color: var(--desc-color);
-  font-family: Poppins;
-  font-size: 2rem;
-  font-weight: 400;
-  
-}
-.btn__search{
-  width: 150px;
-  height: 70px;
-  border-radius: 20px;
-  background: #00256C;
-
-  color: #FFF;
-  text-align: center;
-  font-family: Poppins;
-  font-size: 26px;
-  font-weight: 500;
-  line-height: 1.3;
-}
-
-.form-label,
-.form-input{
-  display: block;
-}
-
-.form-input {
-
-  height: 34px;
-  margin-top: 10px;
-  padding: 4px 8px;
-  border: 2px solid #ccc;
-  border-radius: 4px;
-}
-
-/* ===== button search ===== */
-.btn__search:hover{
-  cursor: pointer;
-  color: var(--header-bg);
-  background: var(--partners-bg)
-}
-
-/* ===== result ===== */
-.result{
   margin-top: 60px;
+  padding: 30px;
+  color: var(--header-bg);
+  font-size: 45px;
+  font-weight: 700;
 }
-.result__container{
-  height: 200px;
-  margin-top: 30px;
-  border-radius: 30px;
- 
 
-  display: flex;
-  align-items: center;
-}
-.information{
-  padding: 15px;
-  width: 550px;
-  height: 200px;
-  border-radius: 20px 0 0 20px;
-  background: #fff;
-  border: 1px solid #00256C;
-}
-/* ===== from - to ===== */
-.fromto__result,
-.calendar__result,
-.seat__result{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+/* search */
+.search_heading{
+  color: var(--header-bg);
+  width: 50px;
+  font-size: 20px;
+  font-weight: 500;
   text-align: center;
+}
+.search,
+.search-top,
+.search-bottom{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
   gap: 20px;
 }
-.to__result,
-.from__result{
-  width: 180px;
-}
-.res-time{
-  color: #00256C;
-  text-align: center;
-  font-family: Roboto;
-  font-size: 5rem;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.3;
-}
-.res-name{
-  color: rgba(87, 95, 102, 0.80);
-  text-align: center;
-  font-family: Poppins;
-  font-size: 3rem;
-  font-weight: 400;
-  line-height: 1.3;
-}
-.code{
-  padding-top: 22px;
-  display: flex;
-  align-items: center;
-}
-.res__dura,
-.res__details,
-.res__station,
-.res__code{
-  
-  color: #00256C;
-  text-align: center;
-  font-family: Poppins;
-  font-size: 2rem;
-  font-weight: 400;
-  line-height: 1.3;
-}
-.res__code{
-  padding-left: 50px;
-}
-.res__station{
-  padding-left: 90px;
-}
-.res__details{
-  padding-left: 85px;
-}
-.btn__details{
-  color: var(--header-bg);
-  width: 100px;
-  height: 40px;
-  border-radius: 20px;
-  border: 1px solid  var(--header-bg);
-  background: #FFF;
-}
-.btn__details:hover{
-  cursor: pointer;
-  color: var(--partners-bg);
-  background: var(--header-bg);
-}
-#toList,
-#fromList{
-  
-  text-align: start;
+.search-top,
+.search-bottom{
+  margin: 20px;
 }
 
-.destination-list {
-  
-  width: 350px;
-  display: none;
-  position: absolute;
-  background-color: #fff;
-  border: 1px solid var(--header-bg);
-  border-radius: 5px;
+.input {
   padding: 10px;
-  z-index: 1;
-  
-}
-.international__li,
-.domestic__li{
-  color: var(--header-bg);
-  font-size: 2rem;
-  font-weight: 500;
-  line-height: 1.14;
-}
-.li{
-  padding-left: 10px;
-  margin: 5px;
-}
-.from__search:hover,
-.to__search:hover{
-  cursor: pointer;
-}
-
-/* ==== price==== */
-.price{
-  height: 200px;
-  flex: auto;
-  text-align: center;
-  align-items: center;
-  padding: 30px;
-  border-radius: 0 20px 20px 0;
-  background: #fff;
-  border: 1px solid #00256C;
-}
-.pre{
+  width: 400px;
   height: 50px;
-  text-align: center;
-}
-.price__class{
-  color: #575F66;
-  text-align: center;
-  font-family: Poppins;
-  font-size: 2.4rem;
-  font-weight: 400;
-  line-height: 1.3;
-}
-.price__vnd{
-  color: #00256C;
-  font-family: Poppins;
-  font-size: 30px;
-  font-style: normal;
-  font-weight: 900;
-  line-height: 1.3;
-}
-.price__number{
-  color: #F00;
-  font-family: Poppins;
-  font-size: 2.6rem;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.3;
+  border-radius: 10px;
+  border-color: var(--header-bg);
 }
 
-
-/* ==== itinerary ==== */
-
-.shape{
-  padding: 0 85px 40px;
-  border-radius: 20px;
-  background: #fff;
-  border: 1px solid var(--header-bg);
-}
-.title__heading{
-  padding: 40px 0 20px;
-  color: var(--header-bg);
-  font-family: Poppins;
-  font-size: 40px;
-  font-weight: 600;
-  line-height: 1.3;
+/* table */
+table {
+  margin-top: 60px;
+  width: 100%;
 }
 
-.title__destination{
-  width: 1000px;
-  height: 120px;
-  background: var(--partners-bg);
-  padding: 40px;
-  border-radius: 20px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  display: flex;
-  align-items: center;
-}
-.item__full,
-.item__abb{
-  max-width: 140px;
-  text-align: center;
-
-  color: var(--header-bg);
-  font-family: Poppins;
-  font-size: 40px;
-  font-weight: 600;
-  line-height: 1.3
-}
-.item__full{
-  margin: 14px 5px  0 5px;
-  color: var(--desc-color);
-  text-align: center;
-  font-family: Poppins;
-  font-size: 22px;
-  font-weight: 400;
-}
-
-/* ==== content ==== */
-.content{
-  margin-top: 20px;
-  padding: 50px 70px 50px;
-  height: 500px;
-  border-radius: 20px;
-  border: 1px solid var(--header-bg);
-}
-.item{
-  margin-bottom: 30px;
-  display: flex;
-  align-items: center;
-  gap: 50px;
-}
-.content__heading{
-  color: var(--header-bg);
-  font-family: Poppins;
-  font-size: 26px;
+th {
+  background-color: #a0d1ff;
+  color: #000;
   font-weight: 500;
-  line-height: 1.3;
-}
-.content__desc{
-  color: var(--desc-color);
-  font-family: Poppins;
-  font-size: 24px;
-  font-weight: 400;
-  line-height: 1.3;
+  font-size: 18px;
 }
 
-.itinerary{
-  display: none;
-  margin-top: 10px;
+th,
+td {
+  padding: 20px;
+  border: 1px solid var(--header-bg);
+  text-align: center;
+}
+
+tr:hover {
+  background-color: rgb(193, 231, 234);
 }
