--- a/templates/index_search_staff.html
+++ b/templates/index_search_staff.html
@@ -66,134 +66,95 @@
     </header>
 
     <!-- main -->
-        <!-- main -->
-        <main>
+        
+      <main>
 
-          <section class="search">
-    
-            <!-- hero-->
-            <section class="hero">
-              <img
-                class="hero__img "
-                src="/asses/img/Plane_Search.svg"
-                alt="Plane_0"
-              />
-            </section>
-    
-            <!-- container-->
+          <section class="lookup">
             <div class="container">
-              <div class="search__container">
-                <div class="fromto__search">
-                    <div class="from__search" onclick="showDestinations('From')">
-                      <div class="name">
-                        <h1 class="abb-name">From</h1>
-                        <p class="full-name">Departing from</p>
-                      </div>
+              
+              <!-- heading -->
+              <h1 class="lookup_heading">Flight Lookup</h1>
+              
+              <!-- search -->
+              <div class="container_lookup">
     
-                        <!-- Danh sách điểm du lịch -->
-                        <div id="fromList" class="destination-list">
-                          <ul class="domestic">
-                            <li class="domestic__li">Domestic</li>
-                            <li class="li" onclick="selectDestination('from', 'HNA')">Ha Noi</li>
-                            <li class="li" onclick="selectDestination('from', 'VTA')">Vung Tau</li>
-                            <li class="li" onclick="selectDestination('from', 'HCM')">Ho CHi Minh</li>
-                          </ul>
-    
-                          <ul class="international">
-                            <li class="international__li">International</li>
-                            <li class="li" onclick="selectDestination('from', 'PAR')">Paris</li>
-                            <li class="li" onclick="selectDestination('from', 'TKO')">Tokyo</li>
-                            <li class="li" onclick="selectDestination('from', 'NYK')">New York</li>
-                          </ul>
-                        </div>
-                        
-    
-                    </div>
-    
-                    <div class="search__icon">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 512 512" fill="#00256C">
-                      <path d="M105.1 202.6c7.7-21.8 20.2-42.3 37.8-59.8c62.5-62.5 163.8-62.5 226.3 0L386.3 160H352c-17.7 0-32 14.3-32 32s14.3 32 32 32H463.5c0 0 0 0 0 0h.4c17.7 0 32-14.3 32-32V80c0-17.7-14.3-32-32-32s-32 14.3-32 32v35.2L414.4 97.6c-87.5-87.5-229.3-87.5-316.8 0C73.2 122 55.6 150.7 44.8 181.4c-5.9 16.7 2.9 34.9 19.5 40.8s34.9-2.9 40.8-19.5zM39 289.3c-5 1.5-9.8 4.2-13.7 8.2c-4 4-6.7 8.8-8.1 14c-.3 1.2-.6 2.5-.8 3.8c-.3 1.7-.4 3.4-.4 5.1V432c0 17.7 14.3 32 32 32s32-14.3 32-32V396.9l17.6 17.5 0 0c87.5 87.4 229.3 87.4 316.7 0c24.4-24.4 42.1-53.1 52.9-83.7c5.9-16.7-2.9-34.9-19.5-40.8s-34.9 2.9-40.8 19.5c-7.7 21.8-20.2 42.3-37.8 59.8c-62.5 62.5-163.8 62.5-226.3 0l-.1-.1L125.6 352H160c17.7 0 32-14.3 32-32s-14.3-32-32-32H48.4c-1.6 0-3.2 .1-4.8 .3s-3.1 .5-4.6 1z"/></svg>
-                    </div>
-    
-                    <div class="to__search" onclick="showDestinations('To')">
-                      <h1 class="abb-name">To</h1>
-                      <p class="full-name">Arriving at</p>
-    
-                      <div id="toList" class="destination-list">
-                        <ul class="domestic">
-                          <li class="domestic__li">Domestic</li>
-                          <li class="li" onclick="selectDestination('to', 'HNA')">Ha Noi</li>
-                          <li class="li" onclick="selectDestination('to', 'VTA')">Vung Tau</li>
-                          <li class="li" onclick="selectDestination('to', 'HCM')">Ho CHi Minh</li>
-                        </ul>
-    
-                        <ul class="international">
-                          <li class="international__li">International</li>
-                          <li class="li" onclick="selectDestination('to', 'PAR')">Paris</li>
-                          <li class="li" onclick="selectDestination('to', 'TKO')">Tokyo</li>
-                          <li class="li" onclick="selectDestination('to', 'NYK')">New York</li>
-                        </ul>
-                        </ul>
-                      </div>
-    
-                    </div>
-                </div>
-    
-                <div class="search__stop">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="1" height="64" viewBox="0 0 1 64" fill="none">
-                  <path d="M0.5 0L0.500003 64" stroke="black"/>
-                  </svg>
-                </div>
-    
-                <div class="calendar__search">
-                  <div class="search__icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="56" viewBox="0 0 448 512" fill="#00256C">
-                    <path d="M128 0c17.7 0 32 14.3 32 32V64H288V32c0-17.7 14.3-32 32-32s32 14.3 32 32V64h48c26.5 0 48 21.5 48 48v48H0V112C0 85.5 21.5 64 48 64H96V32c0-17.7 14.3-32 32-32zM0 192H448V464c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V192zm64 80v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H80c-8.8 0-16 7.2-16 16zm128 0v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H208c-8.8 0-16 7.2-16 16zm144-16c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H336zM64 400v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H80c-8.8 0-16 7.2-16 16zm144-16c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H208zm112 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H336c-8.8 0-16 7.2-16 16z"/></svg>
-                    </svg>
+                <div class="search-top">
+                  <div class="search">
+                    <h2 class="search_heading">Flight</h2>
+                    <input class="input" type="text" placeholder="Search plane ID ..." />
                   </div>
-                  
-                  <div class="form-group">
-                    <label class="form-label" for="DepartureDate">Departure Date</label>
-                    <input class="form-input" type="date" id="DepartureDate" name="DepartureDate" placeholder="Departure Date">
-                    <span class="form-message"></span>
-                </div>
-    
-                </div>
-    
-                <div class="search__stop">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="1" height="64" viewBox="0 0 1 64" fill="none">
-                  <path d="M0.5 0L0.500003 64" stroke="black"/>
-                  </svg>
-                </div>
-    
-                <div class="seat__search">
-                  <div class="search__icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="56" viewBox="0 0 448 512" fill="#00256C">
-                    <path d="M248 48V256h48V58.7c23.9 13.8 40 39.7 40 69.3V256h48V128C384 57.3 326.7 0 256 0H192C121.3 0 64 57.3 64 128V256h48V128c0-29.6 16.1-55.5 40-69.3V256h48V48h48zM48 288c-12.1 0-23.2 6.8-28.6 17.7l-16 32c-5 9.9-4.4 21.7 1.4 31.1S20.9 384 32 384l0 96c0 17.7 14.3 32 32 32s32-14.3 32-32V384H352v96c0 17.7 14.3 32 32 32s32-14.3 32-32V384c11.1 0 21.4-5.7 27.2-15.2s6.4-21.2 1.4-31.1l-16-32C423.2 294.8 412.1 288 400 288H48z"/></svg>
-                    </svg>
+  
+                  <div class="search">
+                    <h2 class="search_heading">Date</h2>
+                    <input class="input" type="text" placeholder="Search date of flight ..." />
                   </div>
-    
-                  <div class="form-group">
-                    <label class="form-label" for="Seat">Cabin Class</label>
-                    <select class="form-input" id="Seat" name="Seat">
-                        <option disabled selected>Select cabin class</option>
-                        <option value="class1">Prestige</option>
-                        <option value="class2">Economy</option>
-                    </select>
-                    <span class="form-message"></span>
+                </div>
+
+                <div class="search-bottom">
+                  <div class="search">
+                    <h2 class="search_heading">From</h2>
+                    <input class="input" type="text" placeholder="Search for where to go ..." />
+                  </div>
+  
+                  <div class="search">
+                    <h2 class="search_heading">To</h2>
+                    <input class="input" type="text" placeholder="Search for where to arrive ..." />
                   </div>
                 </div>
     
-                <div class="search__button">
-                  <button class="btn__search">Search</button>
-                </div>
-                  
+                <!-- <button id="btnSearch" class="btn_bar">Search</button> -->
               </div>
+    
+              <!-- table -->
+              <table id="table_planes" class="table">
+
+                <!-- title -->
+                <div class="table_title">
+                  <tr>
+                    <th>STT</th>
+                    <th>Plane ID</th>
+                    <th>Plane From</th>
+                    <th>Plane To</th>
+                    <th>Depart</th>
+                    <th>flight time</th>
+                    <th>Seats available</th>
+                    <th>Seats booked</th>
+                  </tr>
+                </div>
+                
+                <!-- result 1 -->
+                <div class="table_row">
+                  <tr>
+                    <td>1</td>
+                    <td>HNPQ001</td>
+                    <td>HAN</td>
+                    <td>HCM</td>
+                    <td>31/12/2024 3:00</td>
+                    <td>02:00:00</td>
+                    <td>5</td>
+                    <td>95</td>
+                  </tr>
+                </div>
+    
+                <!-- result 2 -->
+                <div class="table_row">
+                  <tr>
+                    <td>2</td>
+                    <td>HNPQ002</td>
+                    <td>HAN</td>
+                    <td>HCM</td>
+                    <td>31/12/2024 3:00</td>
+                    <td>02:00:00</td>
+                    <td>5</td>
+                    <td>95</td>
+                  </tr>
+                </div>
+    
+              </table>
+    
             </div>
-    
           </section>
-    
-        </main>
+      </main>
     
       </body>
     </html>
