--- a/templates/index_price_staff.html
+++ b/templates/index_price_staff.html
@@ -71,7 +71,7 @@
       <!-- how -->
       <section class="book">
         <div class="container">
-          <h2 class="book__heading section-heading">Price</h2>
+          <h2 class="book__heading section-heading">Passenger & Ticket</h2>
           <div class="book__list">
             <!-- item 1 -->
             <section class="book-item">
