--- a/templates/index_reservation_staff.html
+++ b/templates/index_reservation_staff.html
@@ -69,14 +69,9 @@
     <main>
 
       <!-- hero -->
-      <section class="hero">
-        <img
-          class="hero__img "
-          src="/asses/img/Plane_Search.svg"
-          alt="Plane_0"
-        />
-      </section>
-      <h1>LIST OF BOOKED TICKETS</h1>
+      
+      <h1 class="heading">LIST OF BOOKED TICKETS</h1>
+
       <div class="container_bar">
 
         <div class="container_bar_search_input">
