--- a/asses/css/style_price_staff.css
+++ b/asses/css/style_price_staff.css
@@ -164,7 +164,9 @@ a {
     padding: 100px 0;
     background: #f6fbff;
 }
-
+.book__heading{
+    text-align: center;
+  }
 .book__desc {
     padding-top: 18px;
     width: 40%;
